--- a/ArgoCD/develop-app-set.yaml
+++ b/ArgoCD/develop-app-set.yaml
@@ -33,4 +33,10 @@ spec:
           selfHeal: true
         syncOptions:
           - CreateNamespace=true
+        retry:
+          limit: 2
+          backoff:
+            duration: 5s
+            factor: 2
+            maxDuration: 3m0s
 
