--- a/ArgoCD/security-app-set.yaml
+++ b/ArgoCD/security-app-set.yaml
@@ -30,4 +30,9 @@ spec:
       syncPolicy:
         syncOptions:
           - CreateNamespace=true
-
+        retry:
+          limit: 2
+          backoff:
+            duration: 5s
+            factor: 2
+            maxDuration: 3m0s
