--- a/Application/gotham-demo/values-batman.yaml
+++ b/Application/gotham-demo/values-batman.yaml
@@ -89,7 +89,8 @@ deploy:
           <title>I'm Batman!!</title>
       </head>
       <body>
-          <h1>I'm Batman App From gotham</h1>
+          <h1>I'm Batman App</h1>
+          <br>
           <img src="image/1329876.png" alt="Batman">
       </body>
       </html>
