--- a/Application/gotham-demo/values-batman.yaml
+++ b/Application/gotham-demo/values-batman.yaml
@@ -3,7 +3,7 @@ image:
   ## Defaults to the release name
   name: quay.io/gotham/batman
   ## Tag that you want to build/deploy
-  tag: 01f7b19c927be9f071ba600ec99e378fa8d95cbd
+  tag: df00959
 ## Application/Deployment-specific values (For configuring Deployment, Service, Route, ConfigMap, etc)
 deploy:
   ## Number of pod replicas to deploy
@@ -92,6 +92,8 @@ deploy:
           <h1>I'm Batman App</h1>
           <br>
           <img src="image/1329876.png" alt="Batman">
+          <br>
+          <img src="image/kargo-logo.png" alt="Batman">
       </body>
       </html>
   ## Freeform volume mounts. More information: https://kubernetes.io/docs/concepts/storage/volumes/
